--- a/pages/planes-factura.html
+++ b/pages/planes-factura.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;500&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Planes Pospago | Overloaded Signal</title>
 </head>
 <body>
@@ -84,9 +85,13 @@
                 <li class="item-lista"><a href="#">Terminos y condiciones | </a></li>
                 <li class="item-lista"><a href="#">Centro de privacidad | </a></li>
                 <li class="item-lista"><a href="#">Trabaja con nosotros | </a></li>
-                <li class="item-lista"><a href="#">Todos los derechos reservados para Overloaded Signal © 2022</a></li>
+                <li class="item-lista"><a href="#">Todos los derechos reservados para Cellitti Santiago © 2022</a></li>
             </ul>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
