Se adapto AYUDA y US CLUB para vista mobile. Nueva interfaz y animaciones para desktop de las paginas que faltaban.

--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -22,94 +22,81 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- responsive -->
     <link rel="stylesheet" href="../css/responsive.css">
-    <title>Ayuda | Us Signal</title>
+    <title>Ayuda | Up Signal</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">US</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./planes-factura.html">PLANES POSPAGO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./us-club.html">US CLUB</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="./ayuda.html">AYUDA</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-    </header>
-    <div class="preguntas-frecuentes">
-        <h2 class="titulo-preguntas-frecuentes">PREGUNTAS FRECUENTES</h2>
+  <nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">US</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">INICIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./planes-factura.html">PLANES POSPAGO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./us-club.html">US CLUB</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./ayuda.html">AYUDA</a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="categorias">
-        <!--  <h3 class="titulo-categorias">categorias</h3>-->
-        <nav class="nav-pf">
-            <a href="#facturacion" class="navlink-pf">FACTURACION Y PAGOS</a>
-            <a href="#recargas" class="navlink-pf">RECARGAS Y SALDO</a>
-            <a href="#servicio" class="navlink-pf">SERVICIO</a>
-        </nav>
+  </nav>
+  <div class="contenedor-info-form">
+    <div class="contenedor-titulo-contacto">
+      <h2>CONTACTO</h2>
     </div>
-    <div class="categoria">
-        <h4 id="facturacion" class="titulo-categoria">FACTURACION Y PAGOS</h4>
-        <dl class="lista-desc">
-            <dt class="termino">¿Donde pago mi factura?</dt>
-            <dd class="definicion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, sunt?Lorem ipsum dolor sit amet.</dd>
-            <dt class="termino">Lorem, ipsum dolor.</dt>
-            <dd class="definicion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem minus, reprehenderit quae suscipit quibusdam at!</dd>
-            <dt class="termino">Lorem ipsum dolor sit amet.</dt>
-            <dd class="definicion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus aliquid dolor, rem tenetur incidunt quidem!</dd>
-        </dl>
+    <div class="contenedor-parrafo-contacto">
+      <p>Si tenes dudas de nuestro servicio no dudes en dejarnos tus datos y consulta para que podamos responderte a la brevedad.</p>
     </div>
-    <div class="categoria">
-        <h4 id="recargas" class="titulo-categoria">RECARGAS Y SALDO</h4>
-        <dl class="lista-desc">
-            <dt class="termino">¿Donde pago mi factura?</dt>
-            <dd class="definicion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, sunt?Lorem ipsum dolor sit amet.</dd>
-            <dt class="termino">Lorem, ipsum dolor.</dt>
-            <dd class="definicion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem minus, reprehenderit quae suscipit quibusdam at!</dd>
-            <dt class="termino">Lorem ipsum dolor sit amet.</dt>
-            <dd class="definicion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus aliquid dolor, rem tenetur incidunt quidem!</dd>
-        </dl>
-    </div>
-    <div class="categoria">
-        <h4 id="servicio" class="titulo-categoria">SERVICIO</h4>
-        <dl class="lista-desc">
-            <dt class="termino">¿Donde pago mi factura?</dt>
-            <dd class="definicion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, sunt?Lorem ipsum dolor sit amet.</dd>
-            <dt class="termino">Lorem, ipsum dolor.</dt>
-            <dd class="definicion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem minus, reprehenderit quae suscipit quibusdam at!</dd>
-            <dt class="termino">Lorem ipsum dolor sit amet.</dt>
-            <dd class="definicion">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus aliquid dolor, rem tenetur incidunt quidem!</dd>
-        </dl>
-    </div>
-    <p class="parrafo-form">SI CONSULTASTE NUESTRO CATALOGO DE PREGUNTAS FRECUENTES Y AUN TENES DUDAS O NINGUNA RESPONDE A LA TUYA, PODES ENVIAR UN COMENTARIO JUNTO A TU CORREO PARA QUE PODAMOS RESPONDERTE A LA BREVEDAD.</p>
-    <form class="formulario" action="#">
-        <label class="label" for="nombre">Nombre</label>
-        <input class="input-nombre" type="text" name="nombre" id="nombre" required>
-        <label class="label" for="mail">Correo Electronico</label>
-        <input class="input-mail" type="email" name="mail" id="mail" placeholder="example@gmail.com" required>
-        <label class="label" for="comentario">Consulte acá</label>
-        <input class="input-comentario" type="text" name="comentario" id="comentario" placeholder="Escriba aquí...">
-        <input class="input-sumbit" value="Enviar" type="submit">
+  </div>
+  <div class="contenedor-form-contacto">
+    <form action="get">
+      <div class="name-complete">
+        <input placeholder="NOMBRE" class="input-form name" type="text" required name="first-name">
+        <input placeholder="APELLIDO" class="input-form surname" type="text" required name="surname">
+      </div>
+      <div class="date-contact">
+        <input placeholder="CORREO ELECTRONICO" class="input-form email" type="email" required name="email">
+        <input placeholder="TELEFONO" class="input-form tel" type="tel" required name="phone">
+      </div>
+      <div class="user-region">
+        <input class="input-form user-os" placeholder="USUARIO US CLUB (OPCIONAL)" name="user-os" type="text">
+        <select class="input-form region" name="region">
+          <option value="null">REGIÓN</option>
+          <option value="af">ÁFRICA</option>
+          <option value="as">ASIA</option>
+          <option value="eu">EUROPA</option>
+          <option value="na">NORTE AMÉRICA</option>
+          <option value="oc">OCEANÍA</option>
+          <option value="sa">SUR AMÉRICA</option>
+        </select>
+      </div>
+      <div>
+        <input placeholder="CONSULTE AQUÍ..." class="input-form query" type="text" required name="query">
+      </div>
+      <div class="area-submit">
+        <input class="boton-form sumbit" value="ENVIAR" type="submit">
+      </div>
     </form>
-
-
+  </div>
+  <div class="newsletter">
+    <p>Si deseas recibir novedades y promociones envienos un correo electronico donde desee recibir estas noticias.</p>
+    <div class="suscripcion">
+      <input placeholder="INGRESE CORREO ELECTRONICO" class="input-form" name="newsletter" type="email">
+      <button class="boton-suscripcion">SUSCRIBIRSE</button>
+    </div>
+  </div>
     <footer id="footer" class="footer">
         <div class="empresa-footer">
             <h4>Us Signal © 2022</h4>
