--- a/pages/planes-factura.html
+++ b/pages/planes-factura.html
@@ -25,35 +25,33 @@
     <title>Planes Pospago | Up Signal</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">US</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="./planes-factura.html">PLANES POSPAGO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./us-club.html">US CLUB</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./ayuda.html">AYUDA</a>
-                </li>
-              </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">US</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./planes-factura.html">PLANES POSPAGO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./us-club.html">US CLUB</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./ayuda.html">AYUDA</a>
+              </li>
+            </ul>
           </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
     <div class="menu-combos-pospago">
         <h2 class="titulo-menu-combos-pospago">ASEGURATE DE ESTAR SIEMPRE CONECTADO CON NUESTROS PLANES POSPAGO</h2>
         <p class="descripcion-menu-combos-pospago">Con la contratacion de uno de nuestros planes Pospago, tenes acceso a <a class="link-parrafo" href="#redirection">OS Club</a>.</p>
@@ -131,7 +129,7 @@
         </div>
     </div>
     <div class="menu-combos-pospago2">
-        <p class="descripcion-menu-combos-pospago2">Si ya tenes contratado uno de nuestros Planes, podes conocer todos los beneficios que tenemos para vos haciendo click <a class="link-parrafo2" id="redirection" href="../pages/os-club.html">acá</a>.</p>
+        <p class="descripcion-menu-combos-pospago2">Si ya tenes contratado uno de nuestros Planes, podes conocer todos los beneficios que tenemos para vos haciendo click <a class="link-parrafo2" id="redirection" href="../pages/us-club.html">acá</a>.</p>
     </div>
     <footer id="footer" class="footer">
         <div class="empresa-footer">
