--- a/pages/planes-prepago.html
+++ b/pages/planes-prepago.html
@@ -25,35 +25,33 @@
     <title>Planes Prepago | Up Signal</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">US</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="./planes-prepago.html">PLANES PREPAGO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./planes-factura.html">PLANES POSPAGO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./us-club.html">US CLUB</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./ayuda.html">AYUDA</a>
-                </li>
-              </ul>
-            </div>
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">US</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="../index.html">INICIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./planes-prepago.html">PLANES PREPAGO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./planes-factura.html">PLANES POSPAGO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./us-club.html">US CLUB</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./ayuda.html">AYUDA</a>
+              </li>
+            </ul>
           </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
     <div class="menu-combos">
         <h2 class="titulo-menu-combos">¡ELEGÍ EL COMBO QUE MÁS TE GUSTE!</h2>
         <p class="descripcion-menu-combos">¿No queres estar pendiente de si pagaste o no tu factura? ¡No te preocupes! Con los planes prepago solamente recargas cuando vos lo necesites.</p>
