--- a/pages/us-club.html
+++ b/pages/us-club.html
@@ -22,41 +22,39 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- responsive -->
     <link rel="stylesheet" href="../css/responsive.css">
-    <title>OS Club | Up Signal</title>
+    <title>US Club | Up Signal</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">US</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./planes-factura.html">PLANES POSPAGO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="./us-club.html">US CLUB</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./ayuda.html">AYUDA</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-    </header>
+  <nav class="navbar navbar-expand-lg bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">US</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">INICIO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./planes-prepago.html">PLANES PREPAGO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./planes-factura.html">PLANES POSPAGO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./us-club.html">US CLUB</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./ayuda.html">AYUDA</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
     <div class="inicio-osclub">
         <h2 class="titulo-osclub">US CLUB</h2>
-        <p class="parrafo-osclub">Registrate o si ya tenes cuenta inicia sesion para comprar o contratar uno de nuestros servicios. Con cada compra sumas puntos para obtener grandes beneficios.</p>
+        <p class="parrafo-osclub">Registrate o si ya tenes una cuenta inicia sesión para comprar o contratar uno de nuestros servicios. Con cada compra sumás puntos para canjearlos por regalos y si contratas cualquiera de nuestros planes, contás con un código único para obtener descuentos y grandes beneficios.</p>
     </div>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
@@ -66,24 +64,24 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../img/HBO50off_Port.jpg" class="d-block w-75" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+            <img src="../img/fravega169.png" class="d-block img-carrousel" alt="fravega">
+            <div class="carousel-caption d-none d-md-block bg-dark p-2 text-light bg-opacity-75 rounded-2">
+              <h5>FRAVEGA</h5>
+              <p>Comprando en Fravega podes obtener un 10% de descuento adquiriendo cualquier electrodomestico.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/supermercado.jpg" class="d-block w-75" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+            <img src="../img/supermercado169.jpg" class="d-block img-carrousel" alt="supermercado">
+            <div class="carousel-caption d-none d-md-block bg-dark p-2 text-light bg-opacity-75 rounded-2">
+              <h5>JUMBO</h5>
+              <p>Con Jumbo tenes un 15% de descuento para que puedas llenar tu carrito de compras.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/combo-disney-star.png" class="d-block w-75" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+            <img src="../img/disney-star169.png" class="d-block img-carrousel" alt="disneyplus-starplus">
+            <div class="carousel-caption d-none d-md-block bg-dark p-2 text-light bg-opacity-75 rounded-2">
+              <h5>COMBO +</h5>
+              <p>Solo por ser miembro de US CLUB, tendras acceso a Disney+ y Star+ sin costo adicional.</p>
             </div>
           </div>
         </div>
@@ -136,7 +134,7 @@
                 </div>
             </div>
             <div class="crear-usuario">
-                <button class="boton-cu">Crear Usuario</button>
+                <button class="boton-cu">CREAR USUARIO</button>
             </div>
         </div>
     </div>
