correciones en el codigo

--- a/pages/ayuda.html
+++ b/pages/ayuda.html
@@ -14,8 +14,8 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <!-- scss -->
-  <link rel="stylesheet" href="../sass/main.css">
+  <!-- css -->
+  <link rel="stylesheet" href="../css/main.css">
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,15 +63,15 @@
   </div>
   <div class="contenedor-form-contacto">
     <form action="get">
-      <div class="name-complete">
+      <div class="name-complete area-form">
         <input placeholder="NOMBRE" class="input-form name" type="text" required name="first-name">
         <input placeholder="APELLIDO" class="input-form surname" type="text" required name="surname">
       </div>
-      <div class="date-contact">
+      <div class="date-contact area-form">
         <input placeholder="CORREO ELECTRONICO" class="input-form email" type="email" required name="email">
         <input placeholder="TELEFONO" class="input-form tel" type="tel" required name="phone">
       </div>
-      <div class="user-region">
+      <div class="user-region area-form">
         <input class="input-form user-os" placeholder="USUARIO US CLUB (OPCIONAL)" name="user-os" type="text">
         <select class="input-form region" name="region">
           <option value="null">REGIÓN</option>
