--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  <!-- scss -->
-  <link rel="stylesheet" href="./sass/main.css">
+  <!-- css -->
+  <link rel="stylesheet" href="./css/main.css">
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,15 +68,20 @@
         <p class="parrafo">Actualmente contamos con mas de 1.900 satelites en órbita alrededor del mundo, con esto se
           logra la alta velocidad de internet de baja latencia, conexión a nivel global al alcance de cualquiera y su
           alta fiabilidad sin microcortes.</p>
-        <a href="#" class="boton-info">MÁS INFORMACIÓN</a>
+        <div class="btn-ind">
+          <a href="#" class="boton-info">MÁS INFORMACIÓN</a>
+        </div>
       </div>
     </section>
     <section class="section-header2">
       <div>
         <h2 class="descripcion">SERVICIO TÉCNICO LAS 24 HORAS DEL DÍA</h2>
-        <p class="parrafo">Contamos con atención las 24 horas del día, los 7 días de la semana por cualquier duda o inconveniente que presente, nuestros
+        <p class="parrafo">Contamos con atención las 24 horas del día, los 7 días de la semana por cualquier duda o
+          inconveniente que presente, nuestros
           empleados estarán a la espera para poder ayudarte a solucionar todos tus problemas.</p>
-        <a href="#" class="boton-info">SOPORTE</a>
+        <div class="btn-ind">
+          <a href="#" class="boton-info">SOPORTE</a>
+        </div>
       </div>
       <img src="img/telemarketer-m.png" alt="servicio tecnico">
     </section>
@@ -86,9 +91,11 @@
         <h2 class="descripcion">ADMINISTRA TU PLAN DESDE NUESTRA APLICACIÓN</h2>
         <p class="parrafo">Recomendamos que instales nuestra aplicación móvil para que puedas obtener una mejor
           experiencia con nuestro servicio.</p>
-        <a href="https://www.apple.com/la/app-store/" target="_blank" class="boton-info">APP STORE</a>
-        <a href="https://play.google.com/store/games?hl=es_AR&gl=US&pli=1" target="_blank" class="boton-info2">PLAY
-          STORE</a>
+        <div class="btn-ind">
+          <a href="https://www.apple.com/la/app-store/" target="_blank" class="boton-info">APP STORE</a>
+          <a href="https://play.google.com/store/games?hl=es_AR&gl=US&pli=1" target="_blank" class="boton-info2">PLAY
+            STORE</a>
+        </div>
       </div>
     </section>
     <section class="section-header4">
@@ -96,7 +103,9 @@
         <h2 class="descripcion">PRUEBA NUESTRO SERVICIO ANTES DE CONTRATAR</h2>
         <p class="parrafo">Puedes comunicarte con nuestro soporte para que podamos brindarte una prueba gratuita de 3
           días.</p>
-        <a href="#" class="boton-info">COMIENZA TU PRUEBA</a>
+        <div class="btn-ind">
+          <a href="#" class="boton-info">COMIENZA TU PRUEBA</a>
+        </div>
       </div>
       <img src="img/prueba.jpg" alt="servicio tecnico">
     </section>
