--- a/pages/planes-prepago.html
+++ b/pages/planes-prepago.html
@@ -15,8 +15,8 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <!-- scss -->
-    <link rel="stylesheet" href="../sass/main.css">
+    <!-- css -->
+    <link rel="stylesheet" href="../css/main.css">
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,7 +59,8 @@
         <h2 class="titulo-menu-combos">¡ELEGÍ EL COMBO QUE MÁS TE GUSTE!</h2>
         <p class="descripcion-menu-combos">¿No queres estar pendiente de si pagaste o no tu factura? ¡No te preocupes!
             Con los planes prepago solamente recargas cuando vos lo necesites.</p>
-        <p class="descripcion-menu-combos">¡Todos los combos son x 30 dias, y con la compra de cualquiera tenes WhatsApp, Tik Tok y Spotify gratis!</p>
+        <p class="descripcion-menu-combos">¡Todos los combos son x 30 dias, y con la compra de cualquiera tenes
+            WhatsApp, Tik Tok y Spotify gratis!</p>
     </div>
     <div class="combos">
         <div class="combo combo1">
